--- a/styles/modal.css
+++ b/styles/modal.css
@@ -8,6 +8,16 @@
     border-radius: 25px;
     width: 428px;
     height: 489px;
+    transition: opacity 0.3s ease;
+}
+
+.back__modal {
+    background: rgba(50, 50, 50, 0.2);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 
 .modal__title {
